# session-to-post

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
examples/: sample.diff  session-summary.md  session-transcript.jsonl
src/dev_diary_pipeline/: cli.py  core.py
src/dev_diary_pipeline/prompts/: critic.md  editor.md  writer.md
tests/: test_core.py
