[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "session-to-post"
version = "0.1.0"
description = "Generate development diary drafts from diffs and coding-session notes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
session-to-post = "dev_diary_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dev_diary_pipeline = ["prompts/*.md"]
